--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
+
+/* General */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +15,37 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.content-title {
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.banner-logo {
+  height: 2rem;
+	margin: 0 auto;
+}
+
+.footer {
+	height: 5rem;
+	text-align: center;
+	padding-top: 2.3rem;
+	background: #2b2b2b;
+	background-color: rgba(0, 0, 0, 0.90);
+}
+
+.footer a img {
+	height: 1.7rem;
+}
+
+/* Homepage */
+
+.cover-photo {
+  height: 39rem;
+	background-repeat: no-repeat;
+	background-position: 50% 60%;
+	background-size: cover;
+}
+
