--- a/src/index.css
+++ b/src/index.css
@@ -2,50 +2,28 @@
 
 /* General */
 
+html, body {
+	height: 100%;
+	overflow: auto;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+a:hover, a:visited {
+    text-decoration: none;
+}
+
+a {
+  color: #337ab7;
+  text-decoration: none;  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.content-title {
-    font-family: 'Open Sans', Helvetica, sans-serif;
-    font-weight: 500;
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.banner-logo {
-  height: 2rem;
-	margin: 0 auto;
-}
-
-.footer {
-	height: 5rem;
-	text-align: center;
-	padding-top: 2.3rem;
-	background: #2b2b2b;
-	background-color: rgba(0, 0, 0, 0.90);
-}
-
-.footer a img {
-	height: 1.7rem;
-}
-
-/* Homepage */
-
-.cover-photo {
-  height: 39rem;
-	background-repeat: no-repeat;
-	background-position: 50% 60%;
-	background-size: cover;
 }
 
