Convert CSS styling to CSS modules

--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -1,10 +1,10 @@
-.content-title {
+.contentTitle {
     font-weight: 500;
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
 }
 
-.content-text {
+.contentText {
     text-align: left;
     line-height: 135%;
     font-weight: 400;
