--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -10,10 +10,10 @@
 	height: 1.7rem;
 }
 
-.footer-col {
+.footerCol {
 	display: inline-block;
 }
 
-.footer-link {
+.footerLink {
 	margin: auto 2px;
 }
