--- a/src/components/routes/Home.module.css
+++ b/src/components/routes/Home.module.css
@@ -1,8 +1,8 @@
-.content-row {
+.contentRow {
 	padding: 2rem
 }
 
-.image-link-row {
+.imageLinkRow {
 	background-color: #f7f7f7;
 	padding-top: 2rem;
 	padding-bottom: 1rem;
