--- a/src/components/ImageLink.module.css
+++ b/src/components/ImageLink.module.css
@@ -1,30 +1,30 @@
-.image-link-image {
+.imageLinkImage {
   display:block;
   width: 90%;
   margin: auto;
 }
 
-.image-link-title {
+.imageLinkTitle {
   text-align: center;
   font-weight: 500;
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
   padding-top: 1rem;
 }
-.image-link-title > a {
+.imageLinkTitle > a {
   color: black;
   margin: 1rem;
   transition: color 0.3s ease-in;
 }
 
-.image-link-text {
+.imageLinkText {
   text-align: center;
   line-height: 135%;
   font-weight: 400;
   font-size: 0.9rem;
 }
 
-.image-link-text > a:hover {
+.imageLinkText > a:hover {
   color: grey
 }
 
