--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
+/* General */
+
+html, body {
+	height: 100%;
+	overflow: auto;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Open Sans', Helvetica, sans-serif;
+}
+
+a:hover, a:visited {
+  text-decoration: none;
+}
+
+a {
+  color: #337ab7;
+  text-decoration: none;  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
