in progress - finished Competition page, added and generalized some components

--- a/src/components/CoverPhoto.module.css
+++ b/src/components/CoverPhoto.module.css
@@ -1,6 +1,6 @@
 .coverPhoto {
-  height: 39rem;
+  /* height: 39rem; */
   background-repeat: no-repeat;
-  background-position: 50% 60%;
+  background-position: 50% 90%;
   background-size: cover;
 }
