--- a/src/routes/css/rocket.module.css
+++ b/src/routes/css/rocket.module.css
@@ -1,15 +1,6 @@
 .flex__wrapper {
-    display: flex;
-    flex-wrap: wrap;
+    display: block;
     padding-top: 5.2rem;
     padding-left: 1rem;
     padding-right: 1rem;
 }
-
-.box {
-    height: 17rem;
-    padding: 0.5rem;
-}
-
-
-
