--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -1,7 +1,8 @@
 .container {
 	display: flex;
 	justify-content: center;
-	padding: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .upperPart {
