Implemented sticky footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,13 +1,15 @@
 .footer {
   height: 5rem;
   text-align: center;
-  padding-top: 1.7rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
   background: #2b2b2b;
   background-color: rgba(0, 0, 0, 0.90);
+  margin-top: auto;
 }
 
 .footer a img {
-  height: 1.7rem;
+  height: 1.5rem;
 }
 
 .footerCol {
