Edited the header based on the comments

--- a/src/routes/css/rocket.module.css
+++ b/src/routes/css/rocket.module.css
@@ -1,6 +1,7 @@
 .flex__wrapper {
-    display: block;
-    padding-top: 5.2rem;
+    justify-content: center;
+    padding-top: 2.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-top: 2.5rem;
 }
