--- a/src/routes/css/rocket.module.css
+++ b/src/routes/css/rocket.module.css
@@ -1,7 +1,7 @@
 .flex__wrapper {
     justify-content: center;
-    padding-top: 2.5rem;
+    padding-top: 2rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-top: 2.5rem;
+    padding-bottom: 1rem;
 }
