--- a/src/routes/css/Home.module.css
+++ b/src/routes/css/Home.module.css
@@ -42,3 +42,55 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.landingContainer {
+  display: inline-flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin-top: 120px;
+  margin-left: 120px;
+  text-align: left;
+  overflow: hidden;
+}
+
+.landingContainer span {
+  display: flex;
+  align-items: center;
+  text-align: center
+}
+
+.landingButtons {
+  display: inline-flex;
+  position: relative;
+  gap: 50px;
+  height: 100px;
+  justify-content: center;
+}
+
+@media (max-width: 980px) {
+  .landingContainer span {
+    font-size: 0.7em;
+    padding-left: 30px;
+  }
+}
+
+@media (max-width: 500px) {
+  .landingContainer {
+    margin-left: 80px;
+    line-height: 0.8em;
+    width: 95%;
+  }
+  
+  .landingContainer span {
+    padding-left: 10px;
+    font-size: 0.85em;
+  }
+
+  .landingButtons {
+    padding-left: 20px;
+    gap: 20px;
+  }
+}
