--- a/src/components/BannerPhoto/BannerPhoto.module.css
+++ b/src/components/BannerPhoto/BannerPhoto.module.css
@@ -13,7 +13,7 @@
 .backgroundImage {
     filter: brightness(40%);
     background-repeat: no-repeat;
-    background-position: 100% 70%;
+    background-position: center;
     background-size: cover;
     height: 100%;
     width: 100%;
