--- a/src/routes/css/Home.module.css
+++ b/src/routes/css/Home.module.css
@@ -47,9 +47,8 @@
   display: inline-flex;
   flex-direction: column;
   gap: 20px;
-  align-items: center;
+  align-items: flex-start; /* Align items to the left */
   justify-content: center;
-  width: 80%;
   margin-top: 120px;
   margin-left: 120px;
   text-align: left;
@@ -65,8 +64,8 @@
 .landingButtons {
   display: inline-flex;
   position: relative;
-  gap: 50px;
-  height: 100px;
+  padding-top: 40px;
+  gap: 40px;
   justify-content: center;
 }
 
