--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -16,11 +16,15 @@
 
 .nav {
   width: 100%;
+  justify-content: flex-end;
+  @media (max-width: 1000px) {
+    background: rgba(0, 0, 0, 0.95);
+    text-align: center;
+  }
 }
 
 .navbarContainer {
   margin: 0.25rem 0.5rem 0 0.5rem;
-  background:rgba(0, 0, 0, 0.85)
 }
 
 .navbarLink {
